added the default view for desktop view

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
             <span>DONE</span>
         </footer>
     </div>
-    <!-- <div class="destop_wrapper">
-        <h1>
-            Desktop version comming soon!
-        </h1>
-    </div> -->
+    <div class="destop_wrapper">
+        <div>
+            <h1>
+                Desktop version not available, comming soon!
+            </h1>
+            <p>Please use a mobile phone or adjust your screen size to 767px (mobile view) to view available design &#128515;</p>
+        </div>
+    </div>
 </body>
 
 </html>
