done with current available for the mobile web page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
 </head>
@@ -40,7 +41,8 @@
             <h1>
                 Desktop version not available, comming soon!
             </h1>
-            <p>Please use a mobile phone or adjust your screen size to 767px (mobile view) to view available design &#128515;</p>
+            <p>Please use a mobile phone or adjust your screen size to 767px (mobile view) to view available design
+                &#128515;</p>
         </div>
     </div>
 </body>
