--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 
 <body>
     <div class="mobile_wrapper">
-        <div class="text_section">
-            <h2>What are your main areas of focus</h2>
-            <h4>This will help us build a personalized experience for you</h4>
-        </div>
-        <div class="btn_section">
-            <button class="active_btn">Blood Glucose</button>
-            <button>Mediction</button>
-            <button>Food Tracking</button>
-            <button>Exercise</button>
-            <button>Weight Management</button>
-            <button>Blood Pressure</button>
-            <button>A1C</button>
+        <div class="content">
+            <div class="text_section">
+                <h2>What are your main areas of focus</h2>
+                <h4>This will help us build a personalized experience for you</h4>
+            </div>
+            <div class="btn_section">
+                <button class="active_btn">Blood Glucose</button>
+                <button>Mediction</button>
+                <button>Food Tracking</button>
+                <button>Exercise</button>
+                <button>Weight Management</button>
+                <button>Blood Pressure</button>
+                <button>A1C</button>
+            </div>
         </div>
         <footer>
             <span>BACK</span>
